--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heritage Model Viewer</title>
+    <title>Heritage 3D Map</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Add PlayCanvas dependencies -->
+    <!-- PlayCanvas dependencies -->
     <script src="https://code.playcanvas.com/playcanvas-latest.js"></script>
     <script src="https://code.playcanvas.com/model-viewer/latest/model-viewer.js"></script>
 </head>
 <body>
     <div id="app-container">
-        <!-- PlayCanvas Model Viewer container -->
-        <div id="model-viewer-element"></div>
+        <div id="model-viewer"></div>
     </div>
-
-    <!-- Your custom script -->
     <script src="script.js"></script>
 </body>
 </html>
